# AI-training

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  skills-lock.json
.github/workflows/: approve-pending-actions.yml  docs-bot.yml  experiment-agent-close.yml  experiment-agent.yml  issue-bot.yml  pr-bot.yml  test-bot.yml
apps/: README.md
apps/go/: README.md
apps/go/_template/: README.md  go.mod  main.go
apps/go/hf-inference-hello/: go.mod
apps/go/hf-sentiment-server/: go.mod
apps/java/: README.md
apps/java/_template/: README.md  pom.xml
apps/node/: README.md
apps/node/_template/: README.md  package.json
apps/node/_template/src/: index.js
apps/node/hf-inference-hello/: .env.example  README.md  package-lock.json  package.json
apps/node/hf-inference-hello/src/: cli.js  config.js  inference.js  inference.test.js  server.js
apps/node/hf-qa-rag-api/: .env.example  README.md  package-lock.json  package.json
apps/python/: README.md
apps/python/_template/: .env.example  README.md  pyproject.toml
apps/python/_template/src/my_project_name/: __init__.py  main.py
apps/python/_template/tests/: test_main.py
apps/python/hf-qa-rag/: .env.example  README.md  pyproject.toml
apps/python/hf-qa-rag/knowledge/: qa.txt
apps/python/hf-qa-rag/src/hf_qa_rag/: __init__.py  api.py  config.py  gradio_ui.py  hf_client.py  rag.py
apps/python/hf-qa-rag/tests/: test_knowledge.py
apps/typescript/: README.md
apps/typescript/_template/: README.md  package.json
apps/typescript/hf-qa-rag-ui/: .env.example  README.md  index.html  package-lock.json  package.json
docs/: README.md  agents.md  experiment-ideas.md  getting-started.md  learning-resources.md  skills.md
docs/experiments/: README.md  mcp-server-advanced-features.md  mcp-server-basics.md  mcp-server-security-best-practices.md
scripts/docs-bot/: README.md
scripts/experiment-agent/: README.md  pyproject.toml
scripts/experiment-agent/experiment_agent/: __init__.py  apply.py  docs_context.py  github_ops.py  main.py  plan.py
scripts/issue-bot/: README.md  pyproject.toml
scripts/issue-bot/issue_bot/: git_ops.py  implement.py  main.py  paths.py
scripts/issue-bot/tests/: test_paths.py
scripts/pr-bot/: README.md
scripts/pr-bot/pr_bot/: automerge.py  main.py
scripts/pr-bot/tests/: test_automerge.py
scripts/test-bot/: README.md
scripts/test-bot/tests/: test_generate.py  test_main.py  test_runner.py
(+24 files in other folders)
