[project]
name = "hf-qa-rag"
version = "0.1.0"
description = "FastAPI Q&A over a txt knowledge base + Hugging Face inference + Gradio test UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "huggingface-hub>=0.26.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "httpx>=0.27.0"]
ui = ["gradio>=5.0"]

[project.scripts]
hf-qa-rag-api = "hf_qa_rag.api:run"
hf-qa-rag-ui = "hf_qa_rag.gradio_ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hf_qa_rag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
